--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "async-execute": "^1.1.0"
   },
   "devDependencies": {
+    "@lets/wait": "^2.0.2",
     "@omrilotan/eslint-config": "^1.1.0",
     "abuser": "^2.0.2",
     "chai": "^4.2.0",
